<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseSwitchCompatOrMaterialXml">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseSwitchCompatOrMaterialXml">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/titulo_modificar_factura"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNumeroFacturaModificar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            >


            <EditText
                android:id="@+id/agregarNumeroFacturaModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:hint="@string/numero_factura"
                tools:layout_editor_absoluteX="0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDescripcionFacturaModificar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNumeroFacturaModificar"
            >


            <EditText
                android:id="@+id/agregarDescripcionFacturaModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:hint="@string/descripcion"
                tools:layout_editor_absoluteX="0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputBaseImponibleModificar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDescripcionFacturaModificar">

            <EditText
                android:id="@+id/agregarBaseImponibleModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:hint="@string/base_imponible"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvIvaAgregarModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif"
            android:text="IVA(21%): "
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputBaseImponibleModificar" />

        <TextView
            android:id="@+id/tvPrecioTotalAgregarModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif"
            android:text="Total:"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toEndOf="@+id/tvIvaAgregarModificar"
            app:layout_constraintTop_toBottomOf="@+id/inputBaseImponibleModificar" />

        <DatePicker
            android:id="@+id/datePickerModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@+id/tvPrecioTotalAgregarModificar"
            tools:layout_editor_absoluteX="0dp" />

        <Switch
            android:id="@+id/switchBorradorAgregarModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:checked="false"
            android:text="@string/borrador"
            app:layout_constraintEnd_toStartOf="@+id/switchPagadoAgregarModificar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerModificar" />

        <Switch
            android:id="@+id/switchPagadoAgregarModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:checked="false"
            android:text="@string/pagado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.775"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerModificar" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/selecciona_un_cliente"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerModificar" />

        <Spinner
            android:id="@+id/spinnerClientesModificar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <Button
            android:id="@+id/buttonAgregarFacturaModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="100dp"
            android:background="#87CEEB"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/modificar_cliente"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerClientesModificar"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonEliminarFacturaModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="100dp"
            android:background="#FF6666"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/eliminar_factura"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAgregarFacturaModificar"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

